Added links and JS functions torefresh page

--- a/blog.html
+++ b/blog.html
@@ -1,100 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - My Programming Portfolio and Blog</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        header img {
-            position: absolute;
-            left: 20px;
-            top: 10px;
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-        }
-        nav a {
-            color: #fff;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        nav a:hover {
-            background-color: #555;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-        }
-        .blog {
-            margin: 20px 0;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <img src="img/Foto.png" alt="Home">
-        </a>
-        <h1>My Blog</h1>
-    </header>
-    <nav>
-        <a href="index.html#about">About Me</a>
-        <a href="index.html#portfolio">Portfolio</a>
-        <a href="blog.html">Blog</a>
-    </nav>
-    <div class="container">
-        <section class="blog">
-            <h2>Welcome to my Blog</h2>
-            <article>
-                <h3>1 - Lorem ipsum dolor sit amet</h3>
-                <p>Published 23/06/2024</p>
-                <a href="#">Read more</a>
-            </article>
-            <article>
-                <h3>2 - Do yow know what is the connection between America and Aphrodite?</h3>
-                <p>Published 23/06/2024</p>
-                <a href="#">Read more</a>
-            </article>
-            <article>
-                <h3>3 - What were the benefits raised by the spacial run?</h3>
-                <p>Published 23/06/2024</p>
-                <a href="#">Read more</a>
-            </article>
-            <!-- Add more blog posts as needed -->
-        </section>
-    </div>
-    <footer class="footer">
-        &copy; 2024 My Programming Portfolio and Blog
-    </footer>
-</body>
-</html>
+<div name="blog">
+    <section class="blog">
+        <h2>Welcome to my Blog</h2>
+        <article>
+            <h3>1 - Lorem ipsum dolor sit amet</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#">Read more</a>
+        </article>
+        <article>
+            <h3>2 - Do yow know what is the connection between America and Aphrodite?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spacial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#">Read more</a>
+        </article>
+        <!-- Add more blog posts as needed -->
+    </section>
+</div>
