--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
             <h3>1 - Lorem ipsum dolor sit amet</h3>
             <p>Published 23/06/2024</p>
             <a href="#">Read more</a>
+            <a href="#" id="load-article" name="article" class="button">Load Article</a>
         </article>
         <article>
             <h3>2 - Do yow know what is the connection between America and Aphrodite?</h3>
@@ -16,6 +17,56 @@
             <p>Published 23/06/2024</p>
             <a href="#">Read more</a>
         </article>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div id="modal-body">
+                    <!-- Content will be loaded here -->
+                </div>
+            </div>
+        </div>
         <!-- Add more blog posts as needed -->
     </section>
 </div>
+
+<script>
+    $(function () {
+
+        // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    });
+
+    function loadContent(url) {
+        fetch(url)
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('main-content').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading content:', error));
+    }
+
+    function openModal(url) {
+        fetch(url)
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('modal-body').innerHTML = data;
+                document.getElementById('myModal').style.display = "block";
+            })
+            .catch(error => console.error('Error loading content:', error));
+    }
+</script>
