--- a/blog.html
+++ b/blog.html
@@ -1,54 +1,54 @@
-<div name="blog">
-    <section class="blog">
+<!DOCTYPE html>
+<script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+<html lang="en">
+
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ronaldo Battisti</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="load-content.js" defer></script>
+</head>
+
+<body>
+    <div id="header-placeholder"></div>
+
+    <div class="container" id="main-content">
         <h2>Welcome to my Blog</h2>
         <article>
             <h3>1 - Lorem ipsum dolor sit amet</h3>
             <p>Published 23/06/2024</p>
-            <a href="#">Read more</a>
-            <a href="#" id="load-article" name="article" class="button">Load Article</a>
+            <a href='blog_publications/1- lorem/Lorem ipsum dolor sit amet.htm' class="load-article"
+                data-article-id="1">Load Article</a>
         </article>
         <article>
-            <h3>2 - Do yow know what is the connection between America and Aphrodite?</h3>
+            <h3>2 - Do you know what is the connection between America and Aphrodite?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="blog.html">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
             <p>Published 23/06/2024</p>
             <a href="#">Read more</a>
         </article>
-        <article>
-            <h3>3 - What were the benefits raised by the spacial run?</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#">Read more</a>
-        </article>
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <div id="modal-body">
-                    <!-- Content will be loaded here -->
-                </div>
-            </div>
-        </div>
-        <!-- Add more blog posts as needed -->
-    </section>
-</div>
+    </div>
+</body>
 
 <script>
+
+    //Dispara quando a tela termina de ser carregada
     $(function () {
+        //Seletor de
+        $("a.button").on("click", function (event) {
+            event.preventDefault();
+            if ($("#main-content > div").attr('name') != this.name)
+                loadContent(this.name + ".html");
+        });
 
-        // Get the modal
-        var modal = document.getElementById("myModal");
-
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
-        }
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
+        $("#img1").on("click", function () {
+            window.location.href = this.name + ".html";
+        })
     });
 
     function loadContent(url) {
@@ -60,13 +60,34 @@
             .catch(error => console.error('Error loading content:', error));
     }
 
-    function openModal(url) {
-        fetch(url)
+</script>
+
+</html>
+
+<script>
+
+    function loadContent() {
+        // Load the CSS
+        const link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.href = 'styles.css'; // path to your CSS file
+        document.head.appendChild(link);
+
+        // Load the header
+        fetch('header.html')
             .then(response => response.text())
             .then(data => {
-                document.getElementById('modal-body').innerHTML = data;
-                document.getElementById('myModal').style.display = "block";
-            })
-            .catch(error => console.error('Error loading content:', error));
+                document.getElementById('header-placeholder').innerHTML = data;
+            });
+
+        // Load the footer
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-placeholder').innerHTML = data;
+            });
     }
+
+    document.addEventListener('DOMContentLoaded', loadContent);
+
 </script>
