--- a/index.html
+++ b/index.html
@@ -2,141 +2,16 @@
 <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            position: relative;
-        }
-
-        header img {
-            padding: 15px 15px;
-            /*position: absolute;
-            left: 20px;
-            top: 10px;*/
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-
-        nav {
-            display: flex;
-            height: 80px;
-            align-items: center;
-            justify-content: center;
-            background-color: #444;
-        }
-
-        nav a {
-            color: #fff;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-
-        nav a:hover {
-            background-color: #555;
-        }
-
-        .container {
-            width: 80%;
-            min-height: 400px;
-            margin: 30px auto;
-            background-color: #fff;
-        }
-
-        /*h1 {
-            padding-left: 120px;
-
-        }*/
-
-        .about,
-        .portfolio,
-        .blog {
-            margin: 20px 0;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .footer {
-            display: flex;
-            text-align: left;
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-
-        .icon-large {
-            font-size: 1.2em;
-            color: grey;
-            margin-right: 10px;
-        }
-
-        .div-header {
-            display: flex;
-            align-items: center;
-        }
-
-        .button {
-            align-content: center;
-            align-items: center;
-            text-align: center;
-            height: 25lepx;
-            padding: 10px;
-            margin-left: 5px;
-            margin-right: 5px;
-            background-color: transparent;
-            border: 2px solid;
-            color: rgb(255, 255, 255);
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            transition: all 300ms ease-in-out;
-        }
-    </style>
 </head>
 
 <body>
-    <header>
-        <div class="div-header">
-            <div>
-                <img src="img/Foto.png" alt="Home" name="index" id="img1">
-            </div>
-
-            <div style="
-            position: relative;
-            padding-right: 15px;
-            justify-content: center;">
-                <h1>Welcome to my Programming Portfolio and Blog</h1>
-            </div>
-        </div>
-    </header>
-    <nav>
-        <div class="nav">
-            <a href id="button1" name="about" class="button">About</a>
-            <a href id="button2" name="blog" class="button">Blog</a>
-            <a href id="button3" name="portfolio" class="button">Portifolio</a>
-        </div>
-    </nav>
+    <div id="header-placeholder"></div>
 
     <div class="container" id="main-content">
         <div>
@@ -144,27 +19,8 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <table>
-            <tr>
-                <td>
-                    <p>&copy; 2024 My Programming Portfolio and Blog</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <a href="https://wa.me/5554999256437"><i class="bi bi-whatsapp icon-large"></i></href></a>
-                    <a href="https://www.linkedin.com/in/ronaldo-battisti-258190142/"><i
-                            class="bi bi-linkedin icon-large"></i></href></a>
-                    <a href="https://www.instagram.com/ronaldo_batt/"><i class="bi bi-instagram icon-large"></i></href>
-                    </a>
-                    <a href="https://github.com/ronaldobattisti"><i class="bi bi-github icon-large"></i></href></a>
-                    <a href="mailto: ronaldo.battisti@hotmail.com"><i class="bi bi-envelope icon-large"></i>
-                        </href></a>
-                </td>
-            </tr>
-        </table>
-    </footer>
+    <div id="footer-placeholder"></div>
+
 </body>
 
 <script>
@@ -195,3 +51,31 @@
 </script>
 
 </html>
+
+<script>
+
+    function loadContent() {
+        // Load the CSS
+        const link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.href = 'styles.css'; // path to your CSS file
+        document.head.appendChild(link);
+
+        // Load the header
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-placeholder').innerHTML = data;
+            });
+
+        // Load the footer
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-placeholder').innerHTML = data;
+            });
+    }
+
+    document.addEventListener('DOMContentLoaded', loadContent);
+
+</script>
