Implemented the popup window in page blog and fixed some bugs

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="load-content.js" defer></script>
+    <!--<script src="load-content.js" defer></script>-->
 </head>
 
 <body>
@@ -16,13 +16,33 @@
 
     <div class="container" id="main-content">
         <div>
-            <p>About.</p>
+            <p>
+                <br>Hello, my name is Ronaldo, I'm 27 years old and I'm from Rio Grande do Sul, Brazil.
+                In 2021 I graduated in Control and Automation Engineer by IFRS and I've been working with mechanical
+                design for the last 5 years.</br>
+                <br>Nowadays I work as a machine developer for shoes industry and this job is not just to receive the
+                requirements of the client and draw a machine to satisfy them, it's about understand the real issue and
+                improve the process as a whole, including the client in the solution of the problem and managing dates
+                to guarantee the progress of all areas to let the product done just in time.</br>
+                <br>Since the beginning of engineer graduation, I liked the dynamic and the possibilities while
+                programming
+                in C and making projects in Arduino, that uses a language like C++ but a little simplified.
+                During my work as a mechanical draftsman, I developed some automated tables in excel and did some
+                <br>improvements in Solidworks VBA macros to speed up the creation process.</br>
+                <br>About a year ago I decided to change my career and I start studying for it. I've done courses to
+                learn
+                the basics of JAVA, VBA, Python, HTML, CSS, JavaScript and now I want to do the next step that is find a
+                find an opportunity to put knowledge into practice and learn with most experienced developers.</br>
+                <br></br>
+            </p>
         </div>
     </div>
 
     <div id="footer-placeholder"></div>
 
 </body>
+
+</html>
 
 <script>
 
@@ -48,12 +68,6 @@
             })
             .catch(error => console.error('Error loading content:', error));
     }
-
-</script>
-
-</html>
-
-<script>
 
     function loadContent() {
         // Load the CSS
