--- a/header.html
+++ b/header.html
@@ -1,13 +1,17 @@
 <header>
     <div class="div-header">
         <div>
-            <img src="img/Foto.png" alt="Home" name="index" id="img1">
+            <a href="index.html">
+                <img src="img/Foto.png" alt="Home" name="index" id="img1">
+            </a>
         </div>
 
         <div style="
-        position: relative;
+        position: absolute;
         padding-right: 15px;
-        justify-content: center;">
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);">
             <h1>Welcome to my Programming Portfolio and Blog</h1>
         </div>
     </div>
