--- a/blog.html
+++ b/blog.html
@@ -8,32 +8,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="load-content.js" defer></script>
+    <!--<script src="load-content.js" defer></script>-->
 </head>
 
 <body>
     <div id="header-placeholder"></div>
 
-    <div class="container" id="main-content">
-        <h2>Welcome to my Blog</h2>
-        <article>
-            <h3>1 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href='blog_publications/1- lorem/Lorem ipsum dolor sit amet.htm' class="load-article"
-                data-article-id="1">Load Article</a>
-        </article>
-        <article>
-            <h3>2 - Do you know what is the connection between America and Aphrodite?</h3>
-            <p>Published 23/06/2024</p>
-            <a href="blog.html">Read more</a>
-        </article>
-        <article>
-            <h3>3 - What were the benefits raised by the spatial run?</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#">Read more</a>
-        </article>
+    <h2>Welcome to my Blog</h2>
+    <article>
+        <h3>1 - Lorem ipsum dolor sit amet</h3>
+        <p>Published 23/06/2024</p>
+        <a href="#" class="article-link" data-article-id="1">Load Article</a>
+    </article>
+    <article>
+        <h3>2 - Do you know what is the connection between America and Aphrodite?</h3>
+        <p>Published 23/06/2024</p>
+        <a href="#" class="article-link" data-article-id="2">Read more</a>
+    </article>
+    <article>
+        <h3>3 - What were the benefits raised by the spatial run?</h3>
+        <p>Published 23/06/2024</p>
+        <a href="#" class="article-link" data-article-id="3">Read more</a>
+    </article>
     </div>
+
+    <div class="popup" id="popup">
+        <div class="popup-content" id="popupContent">
+            <span class="close" id="closePopup">&times;</span>
+            <h2 id="popupTitle">Article Title</h2>
+            <p id="popupText">This is the article content. It will appear in the pop-up window.</p>
+        </div>
+    </div>
+
+    <div id="footer-placeholder"></div>
+
 </body>
+
+</html>
 
 <script>
 
@@ -60,12 +71,6 @@
             .catch(error => console.error('Error loading content:', error));
     }
 
-</script>
-
-</html>
-
-<script>
-
     function loadContent() {
         // Load the CSS
         const link = document.createElement('link');
@@ -89,5 +94,61 @@
     }
 
     document.addEventListener('DOMContentLoaded', loadContent);
+
+    document.addEventListener("DOMContentLoaded", function () {
+        var articleLinks = document.querySelectorAll(".article-link");
+        var popup = document.getElementById("popup");
+        var popupTitle = document.getElementById("popupTitle");
+        var popupText = document.getElementById("popupText");
+        var closePopup = document.getElementById("closePopup");
+
+        if (!popup || !popupTitle || !popupText || !closePopup) {
+            console.error("One or more elements are not found in the DOM.");
+            return;
+        }
+
+        var articles = {
+            1: {
+                title: "1 - Lorem ipsum dolor sit amet",
+                content: "Lorem ipsum dolor sit amet"
+            },
+            2: {
+                title: "Article 2",
+                content: "Article 2"
+            },
+            3: {
+                title: "Article 3",
+                content: "Article 3"
+            }
+        }
+
+        articleLinks.forEach(function (link) {
+            link.addEventListener("click", function (event) {
+                event.preventDefault();
+                var articleId = this.getAttribute("data-article-id");
+                var article = articles[articleId];
+
+                if (!article) {
+                    console.error("Article not found for ID:", articleId);
+                    return;
+                }
+
+                popupTitle.innerText = article.title;
+                popupText.innerText = article.content;
+
+                popup.style.display = "block";
+            });
+        });
+
+        closePopup.addEventListener("click", function () {
+            popup.style.display = "none";
+        });
+
+        window.addEventListener("click", function (event) {
+            if (event.target == popup) {
+                popup.style.display = "none";
+            }
+        });
+    });
 
 </script>
