Fixed the tab blog to open article as popups

--- a/blog.html
+++ b/blog.html
@@ -14,22 +14,49 @@
 <body>
     <div id="header-placeholder"></div>
 
-    <h2>Welcome to my Blog</h2>
-    <article>
-        <h3>1 - Lorem ipsum dolor sit amet</h3>
-        <p>Published 23/06/2024</p>
-        <a href="#" class="article-link" data-article-id="1">Load Article</a>
-    </article>
-    <article>
-        <h3>2 - Do you know what is the connection between America and Aphrodite?</h3>
-        <p>Published 23/06/2024</p>
-        <a href="#" class="article-link" data-article-id="2">Read more</a>
-    </article>
-    <article>
-        <h3>3 - What were the benefits raised by the spatial run?</h3>
-        <p>Published 23/06/2024</p>
-        <a href="#" class="article-link" data-article-id="3">Read more</a>
-    </article>
+    <div class="container" id="main-content">
+
+        <h2>Welcome to my Blog</h2>
+        <article>
+            <h3>1 - Lorem ipsum dolor sit amet</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="1">Load Article</a>
+        </article>
+        <article>
+            <h3>2 - Do you know what is the connection between America and Aphrodite?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="2">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="3">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="3">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="3">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="3">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="3">Read more</a>
+        </article>
+        <article>
+            <h3>3 - What were the benefits raised by the spatial run?</h3>
+            <p>Published 23/06/2024</p>
+            <a href="#" class="article-link" data-article-id="3">Read more</a>
+        </article>
     </div>
 
     <div class="popup" id="popup">
@@ -39,8 +66,11 @@
             <p id="popupText">This is the article content. It will appear in the pop-up window.</p>
         </div>
     </div>
+    </div>
 
     <div id="footer-placeholder"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
 
 </body>
 
