--- a/footer.html
+++ b/footer.html
@@ -7,13 +7,16 @@
         </tr>
         <tr>
             <td>
-                <a href="https://wa.me/5554999256437"><i class="bi bi-whatsapp icon-large"></i></href></a>
-                <a href="https://www.linkedin.com/in/ronaldo-battisti-258190142/"><i
-                        class="bi bi-linkedin icon-large"></i></href></a>
-                <a href="https://www.instagram.com/ronaldo_batt/"><i class="bi bi-instagram icon-large"></i></href>
+                <a href="https://wa.me/5554999256437" target="_blank"><i class="bi bi-whatsapp icon-large"></i></href>
                 </a>
-                <a href="https://github.com/ronaldobattisti"><i class="bi bi-github icon-large"></i></href></a>
-                <a href="mailto: ronaldo.battisti@hotmail.com"><i class="bi bi-envelope icon-large"></i>
+                <a href="https://www.linkedin.com/in/ronaldo-battisti-258190142/" target="_blank"><i
+                        class="bi bi-linkedin icon-large"></i></href></a>
+                <a href="https://www.instagram.com/ronaldo_batt/" target="_blank"><i
+                        class="bi bi-instagram icon-large"></i></href>
+                </a>
+                <a href="https://github.com/ronaldobattisti" target="_blank"><i class="bi bi-github icon-large"></i>
+                    </href></a>
+                <a href="mailto: ronaldo.battisti@hotmail.com" target="_blank"><i class="bi bi-envelope icon-large"></i>
                     </href></a>
             </td>
         </tr>
