Fixed dropdown menu

--- a/about.html
+++ b/about.html
@@ -33,6 +33,21 @@
                 learn
                 the basics of JAVA, VBA, Python, HTML, CSS, JavaScript and now I want to do the next step that is find a
                 find an opportunity to put knowledge into practice and learn with most experienced developers.</br>
+                <br>
+                I'm creating this page not only to show recruiters that I'm commited in this searching for knowledge and
+                oportunities
+                but also for things that follow:
+                The second motivation is to keep learning programming logic, in this case HTML CSS and JS. Despite my
+                focus are JAVA or C#, I belive that this fexibility of knowing the basics of other lenguages are very
+                important for the sustententable growth in the career.
+                The third one is to share some historical curiosities that I learn with books, museums, videos, podcasts
+                and conversation. When I was younger,
+                till the midschool I used to despise history because the way it were teached to me. Actually it's very
+                interesting, but you need to put in others
+                pants to get the satisfection of the facts.
+                The forth is to improve my english skill. Because of it all the website is written in english so if you
+                find any issue, please contact me by the links bellow.
+                <br>
                 <br></br>
             </p>
         </div>
