--- a/header.html
+++ b/header.html
@@ -6,20 +6,31 @@
             </a>
         </div>
 
-        <div style="
-        position: absolute;
-        padding-right: 15px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);">
+        <div class="div-header-title">
             <h1>Welcome to my Programming Portfolio and Blog</h1>
         </div>
+
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+                <a href="about.html" id="button1" name="about" class="dropbtn">About</a>
+                <a href="blog.html" id="button2" name="blog" class="dropbtn">Blog</a>
+                <a href="portfolio.html" id="button3" name="portfolio" class="dropbtn">Portifolio</a>
+            </div>
+        </div>
     </div>
+
 </header>
-<nav>
+<!--<nav>
     <div class="nav">
         <a href="about.html" id="button1" name="about" class="button">About</a>
         <a href="blog.html" id="button2" name="blog" class="button">Blog</a>
         <a href="portfolio.html" id="button3" name="portfolio" class="button">Portifolio</a>
     </div>
-</nav>
+</nav>-->
+
+<!--<script>
+    function goToIndex() {
+
+    }
+</script>-->
