--- a/about.html
+++ b/about.html
@@ -15,8 +15,9 @@
     <div id="header-placeholder"></div>
 
     <div class="container" id="main-content">
-        <div>
-            <p>
+        <article>
+            <h1>about</h1>
+            <p class="about" style="text-align: justify;">
                 <br>Hello, my name is Ronaldo, I'm 27 years old and I'm from Rio Grande do Sul, Brazil.
                 In 2021 I graduated in Control and Automation Engineer by IFRS and I've been working with mechanical
                 design for the last 5 years.</br>
@@ -50,7 +51,7 @@
                 <br>
                 <br></br>
             </p>
-        </div>
+        </article>
     </div>
 
     <div id="footer-placeholder"></div>
