--- a/blog.html
+++ b/blog.html
@@ -8,19 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="styles.css">
     <!--<script src="load-content.js" defer></script>-->
 </head>
 
 <body>
-    <div id="header-placeholder"></div>
-
-    <!--<button onclick="openPopup()">Open Popup</button>
-
-    <div id="popup" class="popup">
-        <button onclick="closePopup()">Close</button>
-        <iframe src="blog_publications\1- lorem\Lorem ipsum dolor sit amet.htm"></iframe>
-    </div>-->
-
+    <header id="header-placeholder"></header>
 
     <div class="container" id="main-content">
 
@@ -60,25 +53,10 @@
             <p>Published 23/06/2024</p>
             <a href="#" class="article-link" data-article-id="7">Read more</a>
         </article>
-        <article>
-            <h3>8 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="8">Read more</a>
-        </article>
+
     </div>
 
-    <div class="popup" id="popup">
-        <div class="popup-content" id="popupContent">
-            <span class="close" id="closePopup">&times;</span>
-            <h2 id="popupTitle">Article Title</h2>
-            <p id="popupText">This is the article content. It will appear in the pop-up window.</p>
-        </div>
-    </div>
-    </div>
-
-    <div id="footer-placeholder"></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
+    <footer id="footer-placeholder"></footer>
 
 </body>
 
@@ -86,35 +64,7 @@
 
 <script>
 
-    //Dispara quando a tela termina de ser carregada
-    $(function () {
-        //Seletor de
-        $("a.button").on("click", function (event) {
-            event.preventDefault();
-            if ($("#main-content > div").attr('name') != this.name)
-                loadContent(this.name + ".html");
-        });
-
-        $("#img1").on("click", function () {
-            window.location.href = this.name + ".html";
-        })
-    });
-
-    function loadContent(url) {
-        fetch(url)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('main-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading content:', error));
-    }
-
     function loadContent() {
-        // Load the CSS
-        const link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.href = 'styles.css'; // path to your CSS file
-        document.head.appendChild(link);
 
         // Load the header
         fetch('header.html')
@@ -132,70 +82,5 @@
     }
 
     document.addEventListener('DOMContentLoaded', loadContent);
-
-    document.addEventListener("DOMContentLoaded", function () {
-        var articleLinks = document.querySelectorAll(".article-link");
-        var popup = document.getElementById("popup");
-        var popupTitle = document.getElementById("popupTitle");
-        var popupText = document.getElementById("popupText");
-        var popupContent = "blog_publications\\1- lorem\\" + document.getElementById("data-article-id");
-        var closePopup = document.getElementById("closePopup");
-
-        if (!popup || !popupTitle || !popupText || !closePopup) {
-            console.error("One or more elements are not found in the DOM.");
-            return;
-        }
-
-        var article = {
-            1: {
-                title: "1 - Lorem ipsum dolor sit amet",
-                content: "blog_publications/1- lorem/Lorem ipsum dolor sit amet.htm"
-            },
-            2: {
-                title: "Article 2",
-                content: "Article 2"
-            },
-            3: {
-                title: "Article 3",
-                content: "Article 3"
-            }
-        }
-
-        articleLinks.forEach(function (link) {
-            link.addEventListener("click", function (event) {
-                event.preventDefault();
-                var articleId = this.getAttribute("data-article-id");
-                var article = articles[articleId];
-
-                if (!article) {
-                    console.error("Article not found for ID:", articleId);
-                    return;
-                }
-
-                popupTitle.innerText = article.title;
-
-                fetch(article.content)
-                    .then(response => response.text())
-                    .then(data => {
-                        popupText.innerHTML = data;
-                        popup.style.display = "block";
-                    })
-                    .catch(error => {
-                        console.error('Error loading article content:', error);
-                        popupText.innerText = "Error loading article content.";
-                    });
-            });
-        });
-
-        closePopup.addEventListener("click", function () {
-            popup.style.display = "none";
-        });
-
-        window.addEventListener("click", function (event) {
-            if (event.target == popup) {
-                popup.style.display = "none";
-            }
-        });
-    });
 
 </script>
