Added page portifolio, blog is with trouble acessing index

--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header>
     <div class="div-header">
         <div>
-            <a href="index.html">
-                <img src="img/Foto.png" alt="Home" name="index" id="img1">
+            <a href="../../../index.html">
+                <img src="../../../img/Foto.png" alt="Home" name="index" id="img1">
             </a>
         </div>
 
@@ -13,24 +13,10 @@
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
-                <a href="about.html" id="button1" name="about" class="dropbtn">About</a>
-                <a href="blog.html" id="button2" name="blog" class="dropbtn">Blog</a>
-                <a href="portfolio.html" id="button3" name="portfolio" class="dropbtn">Portifolio</a>
+                <a href="../../../about.html" id="button1" name="about" class="dropbtn">About</a>
+                <a href="../../../blog.html" id="button2" name="blog" class="dropbtn">Blog</a>
+                <a href="../../../portfolio.html" id="button3" name="portfolio" class="dropbtn">Portifolio</a>
             </div>
         </div>
     </div>
-
 </header>
-<!--<nav>
-    <div class="nav">
-        <a href="about.html" id="button1" name="about" class="button">About</a>
-        <a href="blog.html" id="button2" name="blog" class="button">Blog</a>
-        <a href="portfolio.html" id="button3" name="portfolio" class="button">Portifolio</a>
-    </div>
-</nav>-->
-
-<!--<script>
-    function goToIndex() {
-
-    }
-</script>-->
