--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
+    <link rel="icon" href="img/MainIcon.png" sizes="32x32">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--<script src="load-content.js" defer></script>-->
 </head>
