--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
+    <link rel="icon" href="img/MainIcon.png" sizes="32x32">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
     <!--<script src="load-content.js" defer></script>-->
@@ -16,44 +17,14 @@
     <header id="header-placeholder"></header>
 
     <div class="container" id="main-content">
-
         <h2>Welcome to my Blog</h2>
         <article>
-            <h3>1 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="1">Load Article</a>
+            <h3>1 - <a href="publications/blog/1-scrum/1-scrum.html" class="article-link" data-article-id="1">What are
+                    the scrum ceremonies and who
+                    participates?</a></h3>
+            <p>Published 11/09/2024</p>
+            <p class="tags">Tags: Scrum, Management, Team</p>
         </article>
-        <article>
-            <h3>2 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="2">Read more</a>
-        </article>
-        <article>
-            <h3>3 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="3">Read more</a>
-        </article>
-        <article>
-            <h3>4 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="4">Read more</a>
-        </article>
-        <article>
-            <h3>5 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="5">Read more</a>
-        </article>
-        <article>
-            <h3>6 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="6">Read more</a>
-        </article>
-        <article>
-            <h3>7 - Lorem ipsum dolor sit amet</h3>
-            <p>Published 23/06/2024</p>
-            <a href="#" class="article-link" data-article-id="7">Read more</a>
-        </article>
-
     </div>
 
     <footer id="footer-placeholder"></footer>
