--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
+    <link rel="icon" href="img/MainIcon.png" sizes="32x32">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -35,12 +36,12 @@
             if ($("#main-content > div").attr('name') != this.name)
                 loadContent(this.name + ".html");
         });
-    
+
         $("#img1").on("click", function () {
             window.location.href = this.name + ".html";
         })
     });
-    
+
     function loadContent(url) {
         fetch(url)
             .then(response => response.text())
