Removed unecessary codes and added thisSite page

--- a/blog.html
+++ b/blog.html
@@ -34,24 +34,20 @@
 </html>
 
 <script>
-
     function loadContent() {
-
         // Load the header
-        fetch('header.html')
+        fetch('../../../header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-placeholder').innerHTML = data;
             });
 
         // Load the footer
-        fetch('footer.html')
+        fetch('../../../footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer-placeholder').innerHTML = data;
             });
     }
-
     document.addEventListener('DOMContentLoaded', loadContent);
-
 </script>
