--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
     <link rel="icon" href="img/MainIcon.png" sizes="32x32">
+    <link rel="stylesheet" type="text/css" href="../../../styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--<script src="load-content.js" defer></script>-->
 </head>
@@ -62,52 +63,20 @@
 </html>
 
 <script>
-
-    //Dispara quando a tela termina de ser carregada
-    $(function () {
-        //Seletor de
-        $("a.button").on("click", function (event) {
-            event.preventDefault();
-            if ($("#main-content > div").attr('name') != this.name)
-                loadContent(this.name + ".html");
-        });
-
-        $("#img1").on("click", function () {
-            window.location.href = this.name + ".html";
-        })
-    });
-
-    function loadContent(url) {
-        fetch(url)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('main-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading content:', error));
-    }
-
     function loadContent() {
-        // Load the CSS
-        const link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.href = 'styles.css'; // path to your CSS file
-        document.head.appendChild(link);
-
         // Load the header
-        fetch('header.html')
+        fetch('../../../header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-placeholder').innerHTML = data;
             });
 
         // Load the footer
-        fetch('footer.html')
+        fetch('../../../footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer-placeholder').innerHTML = data;
             });
     }
-
     document.addEventListener('DOMContentLoaded', loadContent);
-
 </script>
