--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronaldo Battisti</title>
     <link rel="icon" href="img/MainIcon.png" sizes="32x32">
+    <link rel="stylesheet" type="text/css" href="../../../styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -17,7 +18,8 @@
     <div class="container" id="main-content">
         <h2>Welcome to my Portifolio</h2>
         <article>
-            <h3>1 - <a href="#" class="article-link">My website</a></h3>
+            <h3>1 - <a href="/publications/portifolio/1-thisSite/1-thisSite.html" class="article-link">My website</a>
+            </h3>
             <p>Published 11/09/2024</p>
             <p class="tags">Tags: HTML, CSS, JavaScript, Hosting</p>
         </article>
@@ -46,59 +48,23 @@
 
 </body>
 
-<script>
-
-    //Dispara quando a tela termina de ser carregada
-    $(function () {
-        //Seletor de
-        $("a.button").on("click", function (event) {
-            event.preventDefault();
-            if ($("#main-content > div").attr('name') != this.name)
-                loadContent(this.name + ".html");
-        });
-
-        $("#img1").on("click", function () {
-            window.location.href = this.name + ".html";
-        })
-    });
-
-    function loadContent(url) {
-        fetch(url)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('main-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading content:', error));
-    }
-
-</script>
-
 </html>
 
 <script>
-
     function loadContent() {
-        // Load the CSS
-        const link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.href = 'styles.css'; // path to your CSS file
-        document.head.appendChild(link);
-
         // Load the header
-        fetch('header.html')
+        fetch('../../../header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-placeholder').innerHTML = data;
             });
 
         // Load the footer
-        fetch('footer.html')
+        fetch('../../../footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer-placeholder').innerHTML = data;
             });
     }
-
     document.addEventListener('DOMContentLoaded', loadContent);
-
 </script>
