Adding 3rd publication

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,8 @@
         </article>
 
         <article></article>
-        <h3>3 - <a href="#" class="article-link">Parts color property automation in SolidWorks with C#</a></h3>
+        <h3>3 - <a href="/publications/portifolio/3-partColorAutomation/3-partColorAutomation.html"
+                class="article-link">Parts color property automation in SolidWorks with C#</a></h3>
         <p>Published 11/09/2024</p>
         <p class="tags">Tags: C#, SolidWorks, Automation</p>
         </article>
